--- a/whatu1-scproducer-1/pom.xml
+++ b/whatu1-scproducer-1/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>whatu1-sc</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.whatu1.scproducer-1</groupId>
+	<groupId>com.whatu1.scproducer</groupId>
 	<artifactId>whatu1-scproducer-1</artifactId>
 	<name>whatu1-springcloud-producer-1</name>
 	<description>whatu1-springcloud-producer-1</description>
@@ -17,7 +17,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
