--- a/whatu1-zipkin-positive/pom.xml
+++ b/whatu1-zipkin-positive/pom.xml
@@ -6,24 +6,30 @@
 		<artifactId>whatu1-sc</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.whatu1.scconsumer</groupId>
-	<artifactId>whatu1-scconsumer-1</artifactId>
-	<name>whatu1-springcloud-consumer-1</name>
-	<description>whatu1-springcloud-consumer-1</description>
+	<groupId>com.whatu1.zipkin</groupId>
+	<artifactId>whatu1-zipkin-positive</artifactId>
+	<name>whatu1-zipkin-positive</name>
+	<description>whatu1-zipkin-positive</description>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
